[package]
name = "foundry-utils"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { path = "../../ethers-rs" }
ethers-core = { path = "../../ethers-rs/ethers-core" }
ethers-contract = { path = "../../ethers-rs/ethers-contract" }
ethers-providers = { path = "../../ethers-rs/ethers-providers" }
ethers-signers = { path = "../../ethers-rs/ethers-signers" }
ethers-etherscan = { path = "../../ethers-rs/ethers-etherscan" }
ethers-solc = { path = "../../ethers-rs/ethers-solc" }
ethers-addressbook = { path = "../../ethers-rs/ethers-addressbook" }

eyre = { version = "0.6.5", default-features = false }
hex = "0.4.3"
reqwest = { version = "0.11.8", features = ["json"] }
rustc-hex = { version = "2.1.0", default-features = false }
serde = "1.0.132"
serde_json = { version = "1.0.67", default-features = false }
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
rlp = "0.5.1"